# pyncnn

./: CMakeLists.txt  README.md
examples/: mobilenetssd.py  mobilenetv2ssdlite.py  peleenetssd.py  squeezenetssd.py  yolov2.py  yolov3.py
python/: __init__.py  setup.py  setup.py.i
python/ncnn/: __init__.py
python/ncnn/model_zoo/: fasterrcnn.py  mobilenetssd.py  mobilenetv2ssdlite.py  mobilenetv3ssdlite.py  model_store.py  model_zoo.py  peleenetssd.py  squeezenet.py  squeezenetssd.py  yolov2.py  yolov3.py
python/ncnn/utils/: __init__.py  objects.py  visual.py
src/: main.cpp  pybind11_allocator.h  pybind11_datareader.h  pybind11_layer.h  pybind11_mat.h  pybind11_modelbin.h
tests/: benchmark.py  benchmark_gpu.py  test.py
